tests/fixtures/invalid/pow_list_bool_bytes.py
# Cannot call pow() with List[int], Bool, Bytes
x = pow([1, 2, 3], True, b"hello")
